--- a/index.html
+++ b/index.html
@@ -23,5 +23,49 @@
     <a href="#" class="btn btn-branding">Contact me</a>
     </div>
     </div>
+    <p class="text-center m-5">Featured Projects</p> 
+    <div class="container">
+    <div class="row mb-5">
+     <div class="col d-none d-lg-block">
+         <img src="images/yogurt.png" class="img-fluid" alt="">
+     </div>
+
+     <div class="col">
+     <div class="project-description">
+     <h2 class="mb-5">Yogurt Project</h2>
+     <p class="mb-5 text-muted">This is a simple project 
+    which gives a simple understanding of integrating images into a project.</p>
+    <a href="" class="btn btn-branding-outline">Learn more</a> 
+    </div>
+
+    </div>
+    <div class="row mb-5">
+     <div class="col d-none d-lg-block">
+     <img src="images/weather.png" class="img-fluid" alt="">
+        </div>
+   
+     <div class="col">
+     <div class="project-description">
+     <h2 class="mb-5">Weather Project</h2>
+     <p class="mb-5 text-muted">This is a detailed project 
+     with a user interface using real data to check the weather in different countrys.
+    Languages used were HTML, CSS and Javascript.</p>
+    <a href="" class="btn btn-branding-outline">Learn more</a> 
+    </div>
+
+    </div>
+
+    <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+            <img src="images/yogurt.png" class="img-fluid" alt="">
+        </div>
+   
+        <div class="col">
+        <div class="project-description">
+        <h2 class="mb-5">Yogurt Project</h2>
+        <p class="mb-5 text-muted">This is a simple project 
+       which gives a simple understanding of integrating images into a project.</p>
+       <a href="" class="btn btn-branding-outline">Learn more</a> 
+       </div>
 </body>
 </html>
