small display malfunction fixed

--- a/index.html
+++ b/index.html
@@ -39,33 +39,37 @@
     </div>
 
     </div>
-    <div class="row mb-5">
-     <div class="col d-none d-lg-block">
-     <img src="images/weather.png" class="img-fluid" alt="">
-        </div>
-   
-     <div class="col">
-     <div class="project-description">
-     <h2 class="mb-5">Weather Project</h2>
-     <p class="mb-5 text-muted">This is a detailed project 
-     with a user interface using real data to check the weather in different countrys.
-    Languages used were HTML, CSS and Javascript.</p>
-    <a href="" class="btn btn-branding-outline">Learn more</a> 
-    </div>
-
-    </div>
 
     <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/yogurt.png" class="img-fluid" alt="">
+            <img src="images/weather.png" class="img-fluid" alt="">
         </div>
    
         <div class="col">
         <div class="project-description">
-        <h2 class="mb-5">Yogurt Project</h2>
-        <p class="mb-5 text-muted">This is a simple project 
-       which gives a simple understanding of integrating images into a project.</p>
+        <h2 class="mb-5 mt-5">Weather Project</h2>
+        <p class="mb-5 text-muted">This is a project with a user interface, 
+        real data and was coded with three languages which are HTML, CSS and Javascript.
+        </p>
        <a href="" class="btn btn-branding-outline">Learn more</a> 
+       </div>
+   
+       </div>
+
+       <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+            <img src="images/dictionary.png" class="img-fluid" alt="">
+        </div>
+   
+        <div class="col">
+        <div class="project-description">
+        <h2 class="mb-5 mt-5">Dictionary Project</h2>
+        <p class="mb-5 text-muted">The Dictionary project is a fun user interface project
+         and like the weather project it uses three language. 
+        </p>
+       <a href="" class="btn btn-branding-outline">Learn more</a> 
+       </div>
+   
        </div>
 </body>
 </html>
