--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="hero">
     <p>👋 Hi, I am</p>
     <h1>Ruby Rose</h1>
-    <h2 class="mb-5">Front-end developer based in Europe</h2>
+    <h2 class="mb-5">Front-end developer, based in Europe</h2>
     <div>
     <a href="#" class="btn btn-branding">Contact me</a>
     </div>
