second page complete

--- a/about.html
+++ b/about.html
@@ -17,14 +17,16 @@
 <body>
     <div class="about-section container">
     <div class="row">
-    <div class="col-6">
+    <div class="col-lg-6">
+    <div class="about-section-content">
     <h1>Hi I am Ruby Rose</h1> 
-    <h2>Front-end Developer, based in Europe</h2>
-    <p>I have been coding for just about two years now and have loved every minute of it.
+    <h2 class="mb-4">Front-end Developer, based in Europe</h2>
+    <p class="mb-4">I have been coding for just about two years now and have loved every minute of it.
     Coding opens up a whole new world of creativity, experiences and opportunites. No regrets ! 💯</p>
-    <a href="">See my projects</a>
+    <a href="" class="btn btn-branding">See my projects</a>
     </div>
-    <div class="col-6">
+    </div>
+    <div class="col-lg-6">
     <img src="images/emoji.png" alt="" class="img-fluid">
     </div>
     </div>
