--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,21 +16,61 @@
     />
 </head>
 <body>
-    <div class="about-section container">
-    <div class="row">
-    <div class="col-lg-6">
-    <div class="about-section-content">
-    <h1>Hi I am Ruby Rose</h1> 
-    <h2 class="mb-4">Front-end Developer, based in Europe</h2>
-    <p class="mb-4">I have been coding for just about two years now and have loved every minute of it.
-    Coding opens up a whole new world of creativity, experiences and opportunites. No regrets ! 💯</p>
-    <a href="" class="btn btn-branding">See my projects</a>
+    <div class="hero">
+    <p>👋 Hi, I am</p>
+    <h1>Ruby Rose</h1>
+    <h2 class="mb-5">Front-end developer, based in Europe</h2>
+    <div>
+    <a href="#" class="btn btn-branding">Contact me</a>
     </div>
     </div>
-    <div class="col-lg-6">
-    <img src="images/emoji.png" alt="" class="img-fluid">
+    <p class="text-center m-5">Featured Projects</p> 
+    <div class="container">
+    <div class="row mb-5">
+     <div class="col d-none d-lg-block">
+         <img src="images/yogurt.png" class="img-fluid" alt="">
+     </div>
+
+     <div class="col">
+     <div class="project-description">
+     <h2 class="mb-5">Yogurt Project</h2>
+     <p class="mb-5 text-muted">This is a simple project 
+    which gives a simple understanding of integrating images into a project.</p>
+    <a href="" class="btn btn-branding-outline">Learn more</a> 
     </div>
+
     </div>
+
+    <div class="row mb-5">
+        <div class="col">
+        <div class="project-description">
+        <h2 class="mb-5 mt-5">Weather Project</h2>
+        <p class="mb-5 text-muted">This is a project with a user interface, 
+        real data and was coded with three languages which are HTML, CSS and Javascript.
+        </p>
+       <a href="" class="btn btn-branding-outline">Learn more</a> 
+       </div>
+   
+       </div>
+       
+       <div class="col d-none d-lg-block">
+        <img src="images/weather.png" class="img-fluid" alt="">
     </div>
+
+       <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+            <img src="images/dictionary.png" class="img-fluid" alt="">
+        </div>
+   
+        <div class="col">
+        <div class="project-description">
+        <h2 class="mb-5 mt-5">Dictionary Project</h2>
+        <p class="mb-5 text-muted">The Dictionary project is a fun user interface project
+         and like the weather project it uses three language. 
+        </p>
+       <a href="" class="btn btn-branding-outline">Learn more</a> 
+       </div>
+   
+       </div>
 </body>
 </html>
