--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@
     />
 </head>
 <body>
-    <div class="about-section container">
+    <div class="content-container container">
     <div class="row">
     <div class="col-lg-6">
-    <div class="about-section-content">
+    <div class="content">
     <h1>Hi I am Ruby Rose</h1> 
     <h2 class="mb-4">Front-end Developer, based in Europe</h2>
     <p class="mb-4">I have been coding for just about two years now and have loved every minute of it.
@@ -31,82 +31,5 @@
     </div>
     </div>
     </div>
-</body>
-</html>
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <title>Document</title>
-    <link
-    rel="stylesheet"
-    href="src/style.css"
-    />
-</head>
-<body>
-    <div class="hero">
-    <p>👋 Hi, I am</p>
-    <h1>Ruby Rose</h1>
-    <h2 class="mb-5">Front-end developer, based in Europe</h2>
-    <div>
-    <a href="#" class="btn btn-branding">Contact me</a>
-    </div>
-    </div>
-    <p class="text-center m-5">Featured Projects</p> 
-    <div class="container">
-    <div class="row mb-5">
-     <div class="col d-none d-lg-block">
-         <img src="images/yogurt.png" class="img-fluid" alt="">
-     </div>
-
-     <div class="col">
-     <div class="project-description">
-     <h2 class="mb-5">Yogurt Project</h2>
-     <p class="mb-5 text-muted">This is a simple project 
-    which gives a simple understanding of integrating images into a project.</p>
-    <a href="" class="btn btn-branding-outline">Learn more</a> 
-    </div>
-
-    </div>
-
-    <div class="row mb-5">
-        <div class="col">
-        <div class="project-description">
-        <h2 class="mb-5 mt-5">Weather Project</h2>
-        <p class="mb-5 text-muted">This is a project with a user interface, 
-        real data and was coded with three languages which are HTML, CSS and Javascript.
-        </p>
-       <a href="" class="btn btn-branding-outline">Learn more</a> 
-       </div>
-   
-       </div>
-       
-       <div class="col d-none d-lg-block">
-        <img src="images/weather.png" class="img-fluid" alt="">
-    </div>
-
-       <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-            <img src="images/dictionary.png" class="img-fluid" alt="">
-        </div>
-   
-        <div class="col">
-        <div class="project-description">
-        <h2 class="mb-5 mt-5">Dictionary Project</h2>
-        <p class="mb-5 text-muted">The Dictionary project is a fun user interface project
-         and like the weather project it uses three language. 
-        </p>
-       <a href="" class="btn btn-branding-outline">Learn more</a> 
-       </div>
-   
-       </div>
 </body>
 </html>
