--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <a href="" class="btn btn-branding">See my projects</a>
     </div>
     </div>
-    <div class="col-lg-6">
+    <div class="col-lg-6 d-flex justify-content-center">
     <img src="images/emoji.png" alt="" class="img-fluid">
     </div>
     </div>
