--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <title>Document</title>
     <link
     rel="stylesheet"
-    link="src/style.css"
+    href="src/style.css"
     />
 </head>
 <body>
