--- a/contact.html
+++ b/contact.html
@@ -15,19 +15,149 @@
     />
 </head>
 <body>
-    <div class="content-container container">
-    <div class="content">
+    <div class="container">
+    <nav class="d-flex justify-content-between">
+    <a href="/" title="Homepage">
+    <img
+     src="images/logo.png"
+     class="logo d-none d-md-block"
+     alt="Ruby Logo"
+      />
+     <img
+     src="images/logo-small.jpg"
+     class="logo d-block d-md-none"
+      alt="Ruby Logo"
+      />
+     </a>
+     <ul>
+     <li>
+     <a href="/" title="Homepage"> Home</a>
+     </li>
+      <li>
+     <a href="/about.html" title="About Ruby Rose"> About</a>
+     </li>
+     <li>
+     <a href="/work.html" title="Ruby's work"> Work</a>
+     </li>
+     <li class="active">
+     <a href="/contact.html" title="Contact Ruby Rose"> Contact</a>
+     </li>
+     </ul>
+     </nav>
+     </div>
+     <div class="content-container container">
+     <div class="content">
      <h1 class="mb-5">Let's get in touch!</h1>
-      
-     <h3>Email</h3>
-     <p><a href="mailto:helloimrue@gmail.com">helloimrue@gmail.com</a></p>
-
-     <h3>Twitter</h3>
-     <p><a href="https://www.twitter.com/helloimrue" target="_blank">@helloimrue</a></p>
-
-     <h3>Github</h3>
-     <p><a href="https://www.github.com/helloimrue" target="_blank">helloimrue</a></p>
-    </div>
-    </div>
+     <div class="row">
+     <div class="col-md-8">
+     <form
+        action="https://formspree.io/f/mwkalajy"
+        method="POST"
+        class="border p-3 rounded mb-3"
+        >
+     <div class="mb-3">
+     <label class="form-label"> Your email: </label>
+     <input
+        type="email"
+        name="_replyto"
+        class="form-control"
+        required
+        autofocus
+         />
+     </div>
+     <div class="mb-3">
+     <label class="form-label"> Your message: </label>
+     <textarea
+        name="message"
+        class="form-control"
+         required
+        ></textarea>
+        </div>
+  
+        <button type="submit" class="btn btn-branding">Send</button>
+        </form>
+        </div>
+        <div class="col-md-4">
+        <h3>Email</h3>
+         <p>
+        <a href="mailto:helloimrue@gmail.com"> helloimrue@gmail.com </a>
+        </p>
+        <h3>Twitter</h3>
+        <p>
+        <a href="https://www.twitter.com/helloimrue" target="_blank">
+             @helloimrue
+            </a>
+            </p>
+      <h3>Instagram</h3>
+       <p>
+        <a
+        href="https://www.instagram.com/helloiam-rue"
+        target="_blank"
+        >
+         @helloiam-rue
+        </a>
+        </p>
+        </div>
+        </div>
+        </div>
+       </div>
+       <footer class="container">
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+         <div>
+         <h3>Work Inquiry</h3>
+         <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Ruby Rose"
+            >
+              Contact me
+            </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:helloimrue@gmail.com"
+            class="email-link"
+            title="Email Ruby Rose"
+          >
+            helloimrue@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.github.com/helloimrue"
+            target="_blank"
+            title="GitHub Profile"
+          >
+            <i class="fab fa-github"></i>
+          </a>
+          <a
+            href="https://www.instragram.com/helloimrue"
+            target="_blank"
+            title="instragram Profile"
+          >
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.twitter.com/helloimrue"
+            target="_blank"
+            title="Twitter Profile"
+          >
+            <i class="fab fa-twitter"></i>
+          </a>
+        </div>
+        <p class="text-center mt-5">
+          ✌️ This website was coded by Ruby Rose, and is
+        <a
+        href="https://github.com/yungwrld/portfolio-setup"
+        target="_blank"
+         >
+    open-sourced
+ </a>
+ </p>
+ </footer>
 </body>
 </html>
