--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Front-end dveloper - Ruby Rose</title>
+    <script
+      src="https://kit.fontawesome.com/a6946a9c91.js"
+      crossorigin="anonymous"
+    ></script>
     <link
     rel="stylesheet"
     href="src/style.css"
@@ -174,9 +178,9 @@
               href="https://github.com/yungwrld/portfolio-setup"
               target="_blank"
             >
-              open-sourced
-            </a>
-          </p>
-        </footer>
-      </div>
+           open-sourced
+        </a>
+      </p>
+   </footer>
+ </div>
 </html>
